# roco_ai

./: .envrc  .gitignore  ACTUAL_CODE_INVENTORY.md  AGENTS.md  AGENT_GUIDE.md  API.md  CHANGES_SUMMARY.md  CLAUDE.md  COMMANDS.md  COMPILE_SPEED_REPORT.md  Cargo.toml  EDITOR.md  EDIT_GUIDE.md  EXPANDED_USE_CASES.md  FRAMEWORK_EVERYTHING.md  HOW_CODE_WORKS.md  INSTALL.md  LOCAL_AI_USE_CASES_HARNESS.md  MASTER_INTEGRATION.md  MOSE.md  Makefile  PLAN.md  PLUGINS.md  PROGRESS.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SPEC.md  STRATEGIC_PLAN.md  TASK_01_DESKTOP_WIDGETS.md  TASK_02_DESKTOP_INTERACTION.md  TASK_03_DESKTOP_E2E.md  TASK_04_EDITOR_MIGRATION.md  TASK_05_CHAT_MIGRATION.md  TASK_06_STUDIO_INTEGRATION.md  TASK_07_WEB_FREEZE.md  TASK_08_PLUGIN_VERIFY.md  TASK_09_API_UPDATE.md  TASK_10_CONTINUOUS_IMPROVEMENT.md  TROUBLESHOOTING.md  (+26 more)
apps/plugins/zed/: Cargo.toml  extension.toml  extension.wasm
apps/plugins/zed/src/: lib.rs
crates/agent/: Cargo.toml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: context.rs  error.rs  interaction.rs  lib.rs  mecha_agent.rs  memory.rs  observability.rs  reversibility.rs
crates/agent-core/src/tests/: mod.rs
crates/agent-story/: Cargo.toml
crates/agent-story/src/: commentary.rs  evals.rs  lib.rs  natural_feedback.rs  outline_editing.rs  quality.rs  story_engine.rs  story_persistence.rs  util.rs  writing_assistant.rs
crates/agent-story/src/tests/: mod.rs
crates/agent/src/: agent.rs  agent_chat.rs  base.rs  chapter_steering.rs  commentary.rs  common_agent.rs  context.rs  evals.rs  interaction.rs  lib.rs  mecha_agent.rs  mechanistic.rs  memory.rs  natural_feedback.rs  observability.rs  outline_editing.rs  plan.rs  quality.rs  reversibility.rs  scheduler.rs  sessions.rs  story_direction.rs  story_engine.rs  story_persistence.rs  story_pipeline.rs  subtask.rs  tool_selector.rs  util.rs  writing_assistant.rs
crates/app/: Cargo.toml
crates/app/src/: agent_journal.rs  config.rs  context.rs  daemon.rs  lib.rs  session.rs  workspace.rs
crates/app/src/local_agent/: aggregate.rs  browser.rs  chat.rs  coding.rs  debug.rs  email.rs  framework.rs  full_stack.rs  html.rs  mod.rs  organization.rs  pet.rs  research.rs  sandbox.rs  verifier.rs  writing.rs
crates/app/tests/: facade.rs
crates/cli/: Cargo.toml
crates/cli/examples/: agent.rs  agent_chat.rs  chat.rs  code_demo.rs  desktop_demo.rs  eval_suite.rs  game_demo.rs  grammar_smoke.rs  html_demo.rs  interact_demo.rs  prompt_format_probe_eval.rs  prompt_probe_eval.rs  state_mix_alphas.rs  state_mix_eval.rs  state_tune_eval.rs  story.rs  story_collaborative.rs  story_demo.rs  story_engine.rs  story_eval.rs  story_full.rs  story_human.rs  story_pilot.rs  story_step_eval.rs  strategy_comparison.rs  task_state_tune_eval.rs  token0_probe.rs
crates/cli/src/: daemon.rs  interact.rs  lib.rs  lsp.rs  main.rs  rich_output.rs  story_routes.rs
crates/cli/src/cmd/: coder.rs  desktop.rs  eval.rs  export.rs  game.rs  gpu.rs  html.rs  interact.rs  mod.rs  pet.rs  router.rs  server.rs  story.rs  story_mode.rs
crates/core/: Cargo.toml
crates/core/examples/: chat.rs  daemon.rs  eval_suite.rs  generate.rs  gpu_check.rs  grammar_smoke.rs  grammar_test.rs  quant_analyze.rs  rwkv_load_test.rs  rwkv_test.rs  style_stress.rs  wgpu_test.rs
crates/core/src/: agent.rs  agent_profile.rs  backends.rs  bnf_constraint.rs  builtins.rs  capacity.rs  config.rs  engine.rs  eval.rs  eval_cases.rs  eval_suite.rs  grammar.rs  handler.rs  handler_tools.rs  infer.rs  jsonschema_to_gbnf.rs  lib.rs  logger.rs  memory.rs  policy.rs  resource.rs  rwkv_backend.rs  rwkv_quant_proxy.rs  sandbox.rs  toolcall.rs  tools.rs  trace.rs  vector.rs
crates/core/src/inference/: downloader.rs  hardware.rs  mod.rs  performance.rs
crates/core/src/tests/: agent.rs  agent_profile.rs  builtins.rs  eval_suite.rs  handler.rs  memory.rs
crates/engine/: Cargo.toml
crates/engine/src/: backend.rs  cases.rs  eval.rs  lib.rs  story_evals.rs  types.rs  util.rs
crates/engine/src/tests/: eval_suite.rs
crates/engine/tests/: mock_scenarios.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: gateway.rs  lib.rs  main.rs  router.rs
crates/grammar/: Cargo.toml
crates/grammar/src/: bnf.rs  grammar_library.rs  json_schema.rs  kbnf_compat.rs  lib.rs  schema.rs  strategies.rs
crates/infer/: Cargo.toml
crates/infer-client/: Cargo.toml
crates/infer-client/src/: lib.rs
crates/infer/src/: main.rs
crates/inferd/: Cargo.toml
crates/inferd/src/: main.rs
crates/inference/: Cargo.toml
crates/inference/examples/: gpu_check.rs  grammar_smoke.rs  quant_analyze.rs  rwkv_test.rs  story_engine.rs  story_full.rs  story_human.rs  style_stress.rs
crates/inference/src/: actor.rs  backend.rs  config.rs  lib.rs  quant.rs  sampling.rs
crates/message/: Cargo.toml
crates/message/src/: error.rs  format.rs  gbnf.rs  lib.rs  roles.rs
crates/napi/: Cargo.toml  package.json
crates/napi/src/: lib.rs
crates/server/: Cargo.toml
crates/server/examples/: daemon.rs
crates/server/src/: config.rs  lib.rs  routes.rs  server.rs  story_routes.rs
crates/server/tests/: server_contract.rs
crates/tools/: Cargo.toml
crates/tools/src/: builtins.rs  lib.rs  parse.rs  registry.rs  tool.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  widgets.rs
crates/tui/src/widgets/: chat.rs  status.rs
crates/ui/: Cargo.toml
crates/ui/examples/: pacing_widget_demo.rs  pet_demo.rs
crates/ui/src/: change_timeline.rs  chat.rs  desktop_app.rs  file_tree.rs  lib.rs  link_graph.rs  markdown_editor.rs  pacing.rs  pet.rs  session_browser.rs  wiki_browser.rs
crates/ui/tests/: desktop_e2e.rs  desktop_e2e.rs.skip  token0_probe.rs  user_story.rs
crates/validation/: Cargo.toml
crates/validation/src/: agent.rs  brainstorm.rs  classic.rs  condensed.rs  inference.rs  intent.rs  lib.rs  outline.rs  planner.rs  session.rs  summarizer.rs  tool_set.rs  wiki.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: error.rs  lib.rs  tools.rs  workspace.rs
gui/: Cargo.toml  README.md  index.html
gui/public/: style.css
gui/src/: main.rs
(+417 files in other folders)
