[workspace]
members = [
    "crates/core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }

[patch.crates-io]
web-rwkv = { path = "vendor/web-rwkv" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
