[package]
name = "roco-gui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Dioxus 0.7 — write the UI in Rust (RSX, a JSX-like syntax) + CSS.
# `desktop` compiles the app natively and renders in the system webview
# (no WASM). This matches the project's direction: the real RWKV backend
# (web-rwkv) is a native napi-rs addon, so the GUI stays native too.
dioxus = { version = "0.7", features = ["desktop"] }

# The RoCo AI core library: orchestration, tracer, types. The GUI runs the
# real (mock-backed) orchestration directly and renders the recorded trace.
roco_ai = { path = ".." }

[profile.release]
opt-level = "s"
