[package]
name = "roco-agent-core"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_agent_core"

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar" }
roco-message = { path = "../message" }
roco-tools = { path = "../tools" }
roco-session = { path = "../session" }
roco-workspace = { path = "../workspace" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
