[package]
name = "roco-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_agent"

[dependencies]
roco-engine = { path = "../engine" }
roco-message = { path = "../message" }
roco-tools = { path = "../tools" }
roco-session = { path = "../session" }
roco-workspace = { path = "../workspace" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tokio.workspace = true
thiserror.workspace = true
