[package]
name = "roco-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "roco"
path = "src/bin/roco.rs"

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar" }
roco-inference = { path = "../inference" }
roco-message = { path = "../message" }
roco-agent = { path = "../agent" }
roco-chat-common = { path = "../chat-common" }
roco-tools = { path = "../tools" }
roco-workspace = { path = "../workspace" }
roco-bnf-engine = { path = "../bnf-engine" }
roco-server = { path = "../server" }
roco-gateway = { path = "../gateway" }
roco-infer-client = { path = "../infer-client" }
roco-tui = { path = "../tui" }
roco-app = { path = "../app", package = "roco-app" }
roco-session = { path = "../session" }
roco_ui = { path = "../ui", package = "roco_ui" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest.workspace = true
eframe = { version = "0.31" }
