[package]
name = "roco-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "roco"
path = "src/bin/roco.rs"

[features]
default = []
# Remote inference client (reqwest + rustls). On by default via dep defaults.
# Disable with --no-default-features for faster compile when editing
# agent/engine code without running the CLI.
remote = ["roco-infer-client/remote", "roco-app/remote"]
# Desktop GUI (egui). Implies remote.
desktop = ["dep:eframe", "dep:roco_ui", "remote"]
# HTTP server / gateway / story façade. Implies remote.
net = ["dep:roco-server", "dep:roco-gateway", "dep:axum", "remote"]

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar" }
roco-message = { path = "../message" }
roco-agent = { path = "../agent" }
roco-tools = { path = "../tools" }
roco-workspace = { path = "../workspace" }
roco-infer-client = { path = "../infer-client", default-features = false }
roco-app = { path = "../app", package = "roco-app", default-features = false }
roco-session = { path = "../session" }
# Optional surfaces — not in the fast default path.
roco-server = { path = "../server", optional = true }
roco-gateway = { path = "../gateway", optional = true }
roco_ui = { path = "../ui", package = "roco_ui", optional = true }
axum = { version = "0.7", features = ["macros"], optional = true }
eframe = { version = "0.31", optional = true, default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
tokio = { workspace = true, features = [
    "io-std",
    "io-util",
    "macros",
    "net",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
chrono = { version = "0.4", features = ["serde"] }
