[package]
name = "roco-core"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
reqwest = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }

[features]
default = []
http-backends = ["dep:reqwest", "dep:dotenvy"]
