[package]
name = "roco-core"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_core"
path = "src/lib.rs"

[[bin]]
name = "roco"
path = "src/bin/roco.rs"
required-features = ["grammar-rwkv"]

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
parking_lot = "0.12"
reqwest = { workspace = true, optional = true }
dotenvy = { workspace = true, optional = true }
# Phase 4: local RWKV inference via WebGPU
half = { version = "2.7", optional = true }
memmap2 = { version = "0.9", optional = true }
safetensors = { version = "0.6", optional = true }
fastrand = { version = "2.3", optional = true }
web-rwkv = { version = "0.10", default-features = false, features = ["native"], optional = true }
wgpu = { version = "29.0", optional = true }
# schoolmarm = GBNF grammar walker, used for grammar-constrained decoding
schoolmarm = { version = "0.1", optional = true }
# bnf_sampler = recursive-descent grammar sampler (web-rwkv-axum), replaces schoolmarm
bnf_sampler = { version = "0.3", optional = true }
qp-trie = { version = "0.8", optional = true }
bit-set = { version = "0.5", optional = true }
rustc-hash = { version = "1.1", optional = true }
num_cpus = "1.16"

[features]
default = ["grammar-rwkv"]
http-backends = ["dep:reqwest", "dep:dotenvy"]
local-rwkv = [
    "dep:half",
    "dep:memmap2",
    "dep:safetensors",
    "dep:fastrand",
    "dep:web-rwkv",
    "dep:wgpu",
]
# Grammar-constrained decoding requires both the RWKV runtime (for vocab
# + logits) and a grammar walker. bnf_sampler is the primary engine;
# schoolmarm is kept as a fallback.
grammar-rwkv = ["local-rwkv", "dep:schoolmarm", "dep:bnf_sampler", "dep:qp-trie", "dep:bit-set", "dep:rustc-hash"]
