[package]
name = "roco-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_engine"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
