[package]
name = "roco-engine"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_engine"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true
futures.workspace = true
roco-grammar = { path = "../grammar" }
# MockBackend latency injection; cheap feature set
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time"] }
