[package]
name = "roco-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_gateway"

[dependencies]
roco-engine = { path = "../engine" }
roco-inference = { path = "../inference" }
roco-session = { path = "../session" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
