[package]
name = "roco-gateway"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_gateway"

[dependencies]
roco-engine = { path = "../engine" }
roco-inference = { path = "../inference" }
roco-session = { path = "../session" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json.workspace = true
