[package]
name = "roco-grammar"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_grammar"

[dependencies]
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
schoolmarm = "0.1"
bnf_sampler = "0.3"
qp-trie = "0.8"
bit-set = "0.5"
rustc-hash = "1.1"
web-rwkv = { version = "0.10", default-features = false, features = ["native"] }
