[package]
name = "roco-grammar"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_grammar"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
rand = "0.8"
jsonschema = "0.18"
schoolmarm = "0.1"
kbnf = "0.5.7"
ahash = "0.8"
