[package]
name = "roco-infer-client"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_infer_client"

[dependencies]
roco-engine = { path = "../engine" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true
reqwest.workspace = true
base64 = "0.22"
