[package]
name = "roco-inference"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_inference"

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar", optional = true }
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
half = { version = "2.7" }
safetensors = { version = "0.6" }
fastrand = { version = "2.3" }
bit-set = { version = "0.5" }
futures.workspace = true
web-rwkv = { version = "0.10", default-features = false, features = ["native"] }
wgpu = "29.0"

[features]
default = ["grammar"]
grammar = ["dep:roco-grammar"]
