[package]
name = "roco-message"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_message"

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar", optional = true }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
# Production retry backoff uses tokio::time::sleep
tokio = { workspace = true, features = ["time"] }

[dev-dependencies]
schoolmarm = "0.1"
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[features]
default = ["grammar"]
grammar = ["dep:roco-grammar"]
