[package]
name = "roco-server"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_server"

[dependencies]
roco-engine = { path = "../engine" }
roco-inference = { path = "../inference" }
roco-session = { path = "../session" }
roco-message = { path = "../message" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
