[package]
name = "roco-server"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_server"

[dependencies]
roco-engine = { path = "../engine" }
roco-inference = { path = "../inference" }
roco-session = { path = "../session" }
roco-message = { path = "../message" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }
