[package]
name = "roco-server"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_server"

[dependencies]
roco-engine = { path = "../engine" }
roco-session = { path = "../session" }
roco-message = { path = "../message" }
roco-protocol = { path = "../protocol" }
tokio = { workspace = true, features = [
    "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time",
] }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
futures.workspace = true
reqwest.workspace = true
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tower = { version = "0.5", default-features = false, features = ["util"] }
