[package]
name = "roco_ui"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
roco-agent = { path = "../agent" }
roco-app = { path = "../app", package = "roco-app" }
roco-engine = { path = "../engine" }
futures = { workspace = true }
egui = { version = "0.31", features = ["accesskit"] }
egui_extras = "0.31"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
eframe = { version = "0.31" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "pacing_widget_demo"

[features]
default = []