[package]
name = "roco_ui"
version = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
roco-agent = { path = "../agent" }
roco-app = { path = "../app", package = "roco-app" }
roco-engine = { path = "../engine" }
futures = { workspace = true }
# accesskit is useful but expensive to compile; keep it (a11y) but drop unused
# egui extras defaults where possible.
egui = { version = "0.31", default-features = true, features = ["accesskit"] }
egui_extras = { version = "0.31", default-features = false, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "pacing_widget_demo"

[[example]]
name = "pet_demo"

[dev-dependencies]
roco-infer-client = { path = "../infer-client" }
roco-engine = { path = "../engine" }
reqwest = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
