[package]
name = "roco-validation"
version.workspace = true
edition.workspace = true

[dependencies]
roco-engine = { path = "../engine" }
roco-grammar = { path = "../grammar" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
