[package]
name = "roco-workspace"
version.workspace = true
edition.workspace = true

[lib]
name = "roco_workspace"

[dependencies]
roco-engine = { path = "../engine" }
roco-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
walkdir = "2"
